// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogHeader > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--padded rmd-box--align-center rmd-dialog__header"
  data-testid="header"
/>
`;

exports[`DialogHeader > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--padded rmd-box--align-center rmd-dialog__header custom-class-name"
  data-testid="header"
  style="color: white;"
/>
`;

exports[`dialogHeader class name utility > should be callable with no arguments 1`] = `"rmd-dialog__header"`;
